crates/liter-llm-ffi/liter_llm.h


typedef struct LiterLlmClient LiterLlmClient;
typedef void (*LiterLlmStreamCallback)(const char *chunk_json, void *user_data);
LITER_LLM_EXPORT
LiterLlmClient *literllm_client_new(const char *api_key,
                                    const char *base_url,
                                    const char *model_hint);
LITER_LLM_EXPORT void literllm_client_free(LiterLlmClient *client);
LITER_LLM_EXPORT char *literllm_chat(const LiterLlmClient *client, const char *request_json);
LITER_LLM_EXPORT
int32_t literllm_chat_stream(const LiterLlmClient *client,
                             const char *request_json,
                             LiterLlmStreamCallback callback,
                             void *user_data);
LITER_LLM_EXPORT char *literllm_embed(const LiterLlmClient *client, const char *request_json);
LITER_LLM_EXPORT char *literllm_list_models(const LiterLlmClient *client);
LITER_LLM_EXPORT
char *literllm_image_generate(const LiterLlmClient *client,
                              const char *request_json);
LITER_LLM_EXPORT char *literllm_speech(const LiterLlmClient *client, const char *request_json);
LITER_LLM_EXPORT char *literllm_transcribe(const LiterLlmClient *client, const char *request_json);
LITER_LLM_EXPORT char *literllm_moderate(const LiterLlmClient *client, const char *request_json);
LITER_LLM_EXPORT char *literllm_rerank(const LiterLlmClient *client, const char *request_json);
LITER_LLM_EXPORT char *literllm_create_file(const LiterLlmClient *client, const char *request_json);
LITER_LLM_EXPORT char *literllm_retrieve_file(const LiterLlmClient *client, const char *file_id);
LITER_LLM_EXPORT char *literllm_delete_file(const LiterLlmClient *client, const char *file_id);
LITER_LLM_EXPORT char *literllm_list_files(const LiterLlmClient *client, const char *query_json);
LITER_LLM_EXPORT char *literllm_file_content(const LiterLlmClient *client, const char *file_id);
LITER_LLM_EXPORT
char *literllm_create_batch(const LiterLlmClient *client,
                            const char *request_json);
LITER_LLM_EXPORT char *literllm_retrieve_batch(const LiterLlmClient *client, const char *batch_id);
LITER_LLM_EXPORT char *literllm_list_batches(const LiterLlmClient *client, const char *query_json);
LITER_LLM_EXPORT char *literllm_cancel_batch(const LiterLlmClient *client, const char *batch_id);
LITER_LLM_EXPORT
char *literllm_create_response(const LiterLlmClient *client,
                               const char *request_json);
LITER_LLM_EXPORT
char *literllm_retrieve_response(const LiterLlmClient *client,
                                 const char *response_id);
LITER_LLM_EXPORT
char *literllm_cancel_response(const LiterLlmClient *client,
                               const char *response_id);
LITER_LLM_EXPORT const char *literllm_last_error(void);
LITER_LLM_EXPORT void literllm_free_string(char *s);
LITER_LLM_EXPORT const char *literllm_version(void);
LITER_LLM_EXPORT int32_t literllm_register_provider(const char *config_json);
LITER_LLM_EXPORT int32_t literllm_unregister_provider(const char *name);